# agentic-red-teaming

./: .env.example  .gitignore  README.md  benchmark.py  display.py  main.py  modal_vllm.py  pyproject.toml  run.py
benchmarks/: __init__.py  base.py  wmdp.py
company_policy_alignment/: README.md  __init__.py  agent.py  benchmark.py  example_policy.py  run_example.py  schemas.py
company_policy_alignment/autoresearch/: README.md  __init__.py  attacker_api.py  denylist_experiment.py  episode.py  evaluator.py  learning.py  run_episode.py  seed_strategies.json
company_policy_alignment/skills/: README.md  denylist_attacker_construction.md  strategy_research_and_delegation.md  use_attack_harness.md
probing/: patterns.py  prober.py  run_probing.py
red_team/: attacker.py  attacker_pool.py  evaluator.py  orchestrator.py
results/: wmdp-bio_20260530_124334.json  wmdp-bio_20260530_125146.json
simulation/: goal_evaluator.py  orchestrator.py  simulator.py
skills/: information_extraction.md  jailbreak.md  prompt_injection.md  tool_abuse.md
tests/: conftest.py  test_company_policy_alignment.py  test_company_policy_alignment_autoresearch.py  test_harness.py
