[project]
name = "agentic-red-teaming"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai-agents[modal]>=0.14.2,<0.15",
    "modal",
    "anthropic>=0.50.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
