[project]
name = "agentic-red-teaming"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.76.0",
    "openai-agents[modal]>=0.14.2,<0.15",
    "modal>=1.0.0",
    "anthropic>=0.50.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "raindrop-ai",
    "datasets>=2.0.0",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
